@@ -9,8 +9,8 @@
     Culture of the Czech Republic.
 
 
-    Copyright (C) 2009-2013 IIPImage.
-    Authors: Ruven Pillay & Petr Pridal
+    Copyright (C) 2009-2014 IIPImage.
+    Authors: Ruven Pillay
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -116,7 +116,7 @@ class KakaduImage : public IIPImage {
       @param h height of region
       @param d buffer to fill
    */
-  void process( unsigned int r, int l, int x, int y, unsigned int w, unsigned int h, void* d ) throw (std::string);
+  void process( unsigned int r, int l, int x, int y, unsigned int w, unsigned int h, void* d ) throw (file_error);
 
   /// Convenience function to delete allocated buffers
   /** @param b pointer to buffer
@@ -166,14 +166,14 @@ class KakaduImage : public IIPImage {
   ~KakaduImage() { closeImage(); };
 
   /// Overloaded function for opening a TIFF image
-  void openImage() throw (std::string);
+  void openImage() throw (file_error);
 
 
   /// Overloaded function for loading TIFF image information
   /** @param x horizontal sequence angle
       @param y vertical sequence angle
    */
-  void loadImageInfo( int x, int y ) throw (std::string);
+  void loadImageInfo( int x, int y ) throw (file_error);
 
   /// Overloaded function for closing a JPEG2000 image
   void closeImage();
@@ -188,7 +188,7 @@ class KakaduImage : public IIPImage {
       @param l number of quality layers to decode
       @param t tile number
    */
-  RawTile getTile( int x, int y, unsigned int r, int l, unsigned int t ) throw (std::string);
+  RawTile getTile( int x, int y, unsigned int r, int l, unsigned int t ) throw (file_error);
 
   /// Overloaded function for returning a region for a given angle and resolution
   /** Return a RawTile object: Overloaded by child class.
@@ -202,7 +202,7 @@ class KakaduImage : public IIPImage {
       @param h height of region
       @param b buffer to fill
    */
-  RawTile getRegion( int ha, int va, unsigned int r, int l, int x, int y, unsigned int w, unsigned int h ) throw (std::string);
+  RawTile getRegion( int ha, int va, unsigned int r, int l, int x, int y, unsigned int w, unsigned int h ) throw (file_error);
 
 
 };
